switched from breadboard to pcb removed any external buttons (except those from TTGO esp32 boars gpio0,gpio35) connectors for two ir-sensors and/or reed switch from treadmill, measure speed from reed (not yet!) or the two ir-sensors -> require markers on the treadmill belt support either time-of-flight laser VL53L0X or MPU6050 to measure incline (still work in progress to get actual reading) can now switch manual/auto mode for speed and incline independently. on the webpage you can swich this mode by clicking on the runner icon or the incline icon. in auto mode they should blink

--- a/data/index.html
+++ b/data/index.html
@@ -16,7 +16,7 @@
     <div>
       <div class="speed-dist">
 
-        <i class="fas fa-running" style="color:#059e8a;"></i>
+        <i id="toggle_manual_speed" class="fas fa-running" style="color:#059e8a;"></i>
         <span id="speed">%SPEED%</span>
         <sup class="units">kph</sup>
 
@@ -28,7 +28,7 @@
       </div>
       <div class="incline-elevation">
 
-        <i class="fas fa-chart-line" style="color:#00add6;"></i>
+        <i id="toggle_manual_incline" class="fas fa-chart-line" style="color:#00add6;"></i>
         <span id="incline">%INCLINE%</span>
         <sup class="units">&percnt;</sup>
 
@@ -63,20 +63,21 @@
 	DOWN
       </button>
     </p>
-
-    <p>
-      <i class="fas fa-stopwatch" style="color:#059e8a;"></i>
-      <!-- <span class="dht-labels">Time</span> -->
-      <span id="hour">%HOUR%</span>
-      :
-      <span id="minute">%MINUTE%</span>
-      :
-      <span id="second">%SECOND%</span>
-      <br>
-      <button id="start" class="button button_start">START</button>
-      <button id="stop"  class="button button_stop" >STOP</button>
-      <button id="reset" class="button button_reset">RESET</button>
-    </p>
+    <div id="stopwatch">
+      <p>
+	<i class="fas fa-stopwatch" style="color:#059e8a;"></i>
+	<!-- <span class="dht-labels">Time</span> -->
+	<span id="hour">%HOUR%</span>
+	:
+	<span id="minute">%MINUTE%</span>
+	:
+	<span id="second">%SECOND%</span>
+	<br>
+	<button id="start" class="button button_start">START</button>
+	<button id="stop"  class="button button_stop" >STOP</button>
+	<button id="reset" class="button button_reset">RESET</button>
+      </p>
+    </div>
     <hr>
     <footer>
       <address>
