did some further rework. use .cpp extension instead of .ino add common include to provide extern definitions this code still requires some more cleanup/polish.
Author:    andreas loeffler <al@exitzero.de>

--- a/data/index.html
+++ b/data/index.html
@@ -81,9 +81,12 @@
     <hr>
     <footer>
       <address>
-	<a href="https://github.com/lefty01/ESP32_TTGO_FTMS">ESP32 Treadmill Sensor</a>
+	<a href="https://github.com/lefty01/ESP32_TTGO_FTMS">ESP32 Treadmill Sensor</a> |
+	<a href="/update">Update</a>
 	<br>
 	version: %VERSION%
+	<br>
+	Reset Reason: %RESET_REASON%
       </address>
     </footer>
 
