removed obselete variables
removed obselete variables

--- a/data/index.html
+++ b/data/index.html
@@ -82,7 +82,8 @@
     <footer>
       <address>
 	<a href="https://github.com/lefty01/ESP32_TTGO_FTMS">ESP32 Treadmill Sensor</a> |
-	<a href="/update">Update</a>
+	<a href="/update">Update</a> |
+	<a href="/treadmill.txt">Configuration</a>	
 	<br>
 	version: %VERSION%
 	<br>
