--- a/data/index.html
+++ b/data/index.html
@@ -15,27 +15,32 @@
   <body>
     <div>
       <div class="speed-dist">
-
-        <i id="toggle_manual_speed" class="fas fa-running" style="color:#059e8a;"></i>
+	<p class="toggle_switch"><i id="manual_speed_button" class="fa fa-toggle-off inactive"></i></p>
+	<p>
+	<i id="toggle_manual_speed" class="fas fa-running" style="color:#059e8a;"></i>
         <span id="speed">%SPEED%</span>
         <sup class="units">kph</sup>
-
+	</p>
+	<p>
         <i class="fas fa-shoe-prints" style="color:#2d0000;"></i>
         &nbsp;&nbsp;
         <span id="distance">%DISTANCE%</span>
         <sup class="units">KM</sup>
-
+	</p>
       </div>
-      <div class="incline-elevation">
 
+      <div class="incline-elevation">
+	<p class="toggle_switch"><i id="manual_incline_button" class="fa fa-toggle-off inactive"></i></p>
+	<p>
         <i id="toggle_manual_incline" class="fas fa-chart-line" style="color:#00add6;"></i>
         <span id="incline">%INCLINE%</span>
         <sup class="units">&percnt;</sup>
-
+	</p>
+	<p>
         <i class="fas fa-mountain" style="color:#00add6;"></i>
         <span id="elevation">%ELEVATION%</span>
         <sup class="units">M</sup>
-
+	</p>
       </div>
     </div>
 
